# multiverse

./: .clang-format  .gitmodules  CMakeLists.txt
modules/creature/: CMakeLists.txt  creature.hpp  statistic.hpp
modules/creature/test/: test_creature_stat.cpp
modules/nursery/: CMakeLists.txt  nursery.hpp
modules/nursery/src/: main.cpp
modules/stars/: CMakeLists.txt  concepts.hpp
